Problem2: Even Fibonacci numbers

--- a/ProjectEuler.Solution.Tests/ProjectEuler.Solution.Tests.csproj
+++ b/ProjectEuler.Solution.Tests/ProjectEuler.Solution.Tests.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EvenFibonacciNumbersTest.cs" />
     <Compile Include="MultiplesOf3and5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
